Modification des cotes sur les plans de la structure

--- a/Cahier_suivi_projet.tex
+++ b/Cahier_suivi_projet.tex
@@ -122,6 +122,8 @@ ni glissière.
 
 
 \section{Dimensionnement de la structure}
-
+Se référer au document intitulé "Plans\_phare.pdf" récapitulant toutes les dimensions de la structure
+du phare. \\
+Un rendez-vous sera fixé au FabMSTIC (iMag) début janvier pour la fabrication.
 
 \end{document}
